Trying for the 4th time to fix white space on mobile screen

--- a/src/styles/destination.scss
+++ b/src/styles/destination.scss
@@ -8,6 +8,11 @@
     height: 100%;
     color: #fff;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
     h2 {
       font-family: "Barlow Condensed";
       font-size: 16px;
